--- a/src/blocks/element.css
+++ b/src/blocks/element.css
@@ -1,9 +1,7 @@
-/*src/blocks/elements*/
+/*src/blocks/element.css*/
 
 /* -------------  1280  ------------- */
-
 /* li */
-
 .element {
   max-width: 282px;
   max-width: 361px;
@@ -21,7 +19,6 @@
 }
 
 /* image */
-
 .element__image {
   max-width: 282px;
   height: 282px;
@@ -36,7 +33,6 @@
 }
 
 /* Trash */
-
 .element__delete-button {
   max-width: 18px;
   max-height: 19.3px;
@@ -60,7 +56,6 @@
 }
 
 /* description */
-
 .element__description {
   max-width: 246px;
   max-height: 23px;
@@ -75,7 +70,6 @@
 }
 
 /* title */
-
 .element__title {
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
@@ -92,10 +86,11 @@
 }
 
 /* like-button */
-
 .element__like-button {
-  width: 21px;
-  height: 19px;
+  max-width: 21px;
+  max-height: 19px;
+  width: 100%;
+  height: 100%;
   background-color: transparent;
   background-image: url("../images/element-like-disabled.svg");
   background-repeat: no-repeat;
@@ -115,10 +110,8 @@
 }
 
 /* -------------  1152 ------------- */
-
 @media screen and (max-width: 1152px) {
   /* li */
-
   .element {
     max-width: 253.8px;
     max-height: 324.9px;
@@ -126,7 +119,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 253.8px;
     height: 253.8px;
@@ -134,7 +126,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 221.4px;
     max-height: 20.7px;
@@ -142,14 +133,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 21.6px;
     line-height: 26.1px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 18.9px;
     height: 17.1px;
@@ -158,10 +147,8 @@
 }
 
 /* -------------  1088------------- */
-
 @media screen and (max-width: 1088px) {
   /* li */
-
   .element {
     max-width: 239.68px;
     max-height: 306.83px;
@@ -169,7 +156,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 239.68px;
     height: 239.68px;
@@ -177,7 +163,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 209.09px;
     max-height: 19.54px;
@@ -185,14 +170,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 20.39px;
     line-height: 24.64px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 17.84px;
     height: 16.14px;
@@ -201,10 +184,8 @@
 }
 
 /* -------------  1024  ------------- */
-
 @media screen and (max-width: 1024px) {
   /* li */
-
   .element {
     max-width: 225.56px;
     max-height: 288.75px;
@@ -212,7 +193,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 224.92px;
     height: 224.92px;
@@ -220,7 +200,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 196.77px;
     max-height: 18.38px;
@@ -228,14 +207,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 19.18px;
     line-height: 23.18px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 16.78px;
     height: 15.18px;
@@ -244,10 +221,8 @@
 }
 
 /* -------------  896 ------------- */
-
 @media screen and (max-width: 896px) {
   /* li */
-
   .element {
     max-width: 197.36px;
     max-height: 252.65px;
@@ -255,7 +230,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 197.36px;
     height: 197.36px;
@@ -263,7 +237,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 172.17px;
     max-height: 16.08px;
@@ -271,14 +244,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 16.78px;
     line-height: 20.28px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 14.68px;
     height: 13.28px;
@@ -287,10 +258,8 @@
 }
 
 /* -------------  768 ------------- */
-
 @media screen and (max-width: 768px) {
   /* li */
-
   .element {
     max-width: 206.37px;
     max-height: 314.49px;
@@ -298,7 +267,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 206.37px;
     height: 206.37px;
@@ -306,23 +274,19 @@
   }
 
   /* description */
-
   .element__description {
-    /* max-width: 214.32px; */
     max-width: 190px;
     max-height: 20.02px;
     margin: 21.73px auto 26.96px;
   }
 
   /* title */
-
   .element__title {
     font-size: 20.87px;
     line-height: 25.24px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 17.63px;
     height: 16.5px;
@@ -331,10 +295,8 @@
 }
 
 /* -------------  656  ------------- */
-
 @media screen and (max-width: 656px) {
   /* li */
-
   .element {
     max-width: 209.86px;
     max-height: 268.64px;
@@ -342,7 +304,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 209.86px;
     height: 209.86px;
@@ -350,7 +311,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 183.07px;
     max-height: 17.11px;
@@ -358,14 +318,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 17.83px;
     line-height: 21.57px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 15.6px;
     height: 14.1px;
@@ -374,10 +332,8 @@
 }
 
 /* -------------  544  ------------- */
-
 @media screen and (max-width: 544px) {
   /* li */
-
   .element {
     max-width: 475.82px;
     min-height: 609.12px;
@@ -387,7 +343,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 475.82px;
     max-height: 475.82px;
@@ -399,7 +354,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 415.08px;
     max-height: 38.8px;
@@ -409,26 +363,23 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 40.48px;
     line-height: 48.92px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 35.41px;
     height: 32.05px;
-    margin: auto 5.05px -1.67px 0;
+    /* margin: auto 5.05px -1.67px 0; */
+    margin: 0 0 auto 0;
   }
 }
 
 /* -------------  432  ------------- */
-
 @media screen and (max-width: 432px) {
   /* li */
-
   .element {
     max-width: 380.66px;
     min-height: 487.3px;
@@ -436,7 +387,6 @@
   }
 
   /* image */
-
   .element__image {
     max-width: 380.66px;
     min-height: 380.66px;
@@ -444,7 +394,6 @@
   }
 
   /* description */
-
   .element__description {
     max-width: 332.07px;
     max-height: 31.04px;
@@ -452,14 +401,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 32.39px;
     line-height: 39.14px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 28.33px;
     height: 25.64px;
@@ -468,10 +415,8 @@
 }
 
 /* -------------  375  ------------- */
-
 @media screen and (max-width: 375px) {
   /* li */
-
   .element {
     max-width: 330.44px;
     max-height: 423.01px;
@@ -480,16 +425,14 @@
   }
 
   /* image */
-
   .element__image {
     width: 100%;
-    height: auto;
+
     min-height: 330.44px;
     border-radius: 11.71px 11.71px 0px 0px;
   }
 
   /* description */
-
   .element__description {
     max-width: 288.26px;
     max-height: 26.95px;
@@ -497,14 +440,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 28.12px;
     line-height: 33.98px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 24.6px;
     height: 22.26px;
@@ -513,10 +454,8 @@
 }
 
 /* -------------  320  ------------- */
-
 @media screen and (max-width: 320px) {
   /* li */
-
   .element {
     max-width: 282px;
     max-height: 361px;
@@ -525,16 +464,13 @@
   }
 
   /* image */
-
   .element__image {
     width: 100%;
     min-height: 282px;
-    height: auto;
     border-radius: 10px 10px 0px 0px;
   }
 
   /* description */
-
   .element__description {
     max-width: 246px;
     max-height: 23px;
@@ -542,14 +478,12 @@
   }
 
   /* title */
-
   .element__title {
     font-size: 24px;
     line-height: 29px;
   }
 
   /* like-button */
-
   .element__like-button {
     width: 21px;
     height: 19px;
