--- a/src/blocks/root.css
+++ b/src/blocks/root.css
@@ -1,13 +1,14 @@
-/* -------------  root page  ------------- */
+/* src/blocks/root.css */
 
+/* -------------  1280  ------------- */
+/* root */
 * {
   background-color: #000000;
   margin: 0;
   padding: 0;
 }
 
-/* -------------  body  ------------- */
-
+/* body, html */
 html,
 body {
   background-color: #000000;
