--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,7 +1,7 @@
+/* src/blocks/footer.css */
+
 /* -------------  1280  ------------- */
-
 /* footer */
-
 .footer {
   max-width: 318px;
   max-height: 18px;
@@ -11,7 +11,6 @@
 }
 
 /* copyright */
-
 .footer__copyright {
   max-width: 318px;
   width: 100%;
@@ -26,10 +25,8 @@
 }
 
 /* -------------  1152 ------------- */
-
 @media screen and (max-width: 1152px) {
   /* footer */
-
   .footer {
     max-width: 286.2px;
     max-height: 16.2px;
@@ -37,7 +34,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 286.2px;
     font-size: 16.2px;
@@ -46,10 +42,8 @@
 }
 
 /* -------------  1088------------- */
-
 @media screen and (max-width: 1088px) {
   /* footer */
-
   .footer {
     max-width: 270.28px;
     max-height: 15.29px;
@@ -57,7 +51,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 270.28px;
     font-size: 15.29px;
@@ -66,10 +59,8 @@
 }
 
 /* -------------  1024  ------------- */
-
 @media screen and (max-width: 1024px) {
   /* footer */
-
   .footer {
     max-width: 254.36px;
     max-height: 14.38px;
@@ -77,7 +68,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 254.36px;
     font-size: 14.38px;
@@ -86,10 +76,8 @@
 }
 
 /* -------------  896 ------------- */
-
 @media screen and (max-width: 896px) {
   /* footer */
-
   .footer {
     max-width: 222.56px;
     max-height: 12.58px;
@@ -97,7 +85,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 222.56px;
     font-size: 12.58px;
@@ -106,10 +93,8 @@
 }
 
 /* -------------  768 ------------- */
-
 @media screen and (max-width: 768px) {
   /* footer */
-
   .footer {
     max-width: 190.75px;
     max-height: 10.78px;
@@ -117,7 +102,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 190.75px;
     font-size: 10.78px;
@@ -126,10 +110,8 @@
 }
 
 /* -------------  656  ------------- */
-
 @media screen and (max-width: 656px) {
   /* footer */
-
   .footer {
     max-width: 162.91px;
     max-height: 9.2px;
@@ -137,7 +119,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 162.91px;
     font-size: 9.2px;
@@ -146,10 +127,8 @@
 }
 
 /* -------------  544  ------------- */
-
 @media screen and (max-width: 544px) {
   /* footer */
-
   .footer {
     max-width: 475.82px;
     max-height: 23.61px;
@@ -157,7 +136,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 475.82px;
     font-size: 23.61px;
@@ -166,10 +144,8 @@
 }
 
 /* -------------  432  ------------- */
-
 @media screen and (max-width: 432px) {
   /* footer */
-
   .footer {
     max-width: 380.66px;
     max-height: 18.89px;
@@ -177,7 +153,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 380.66px;
     font-size: 18.89px;
@@ -186,10 +161,8 @@
 }
 
 /* -------------  375  ------------- */
-
 @media screen and (max-width: 375px) {
   /* footer */
-
   .footer {
     max-width: 330.44px;
     max-height: 16.4px;
@@ -197,7 +170,6 @@
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 330.44px;
     font-size: 16.4px;
@@ -206,21 +178,16 @@
 }
 
 /* -------------  320  ------------- */
-
 @media screen and (max-width: 320px) {
   /* footer */
-
   .footer {
     max-width: 282px;
-    /* max-width: 267px; */
-    max-height: 14px;
-    width: 87.5%;
+    width: 100%;
     margin: 50px auto 36px;
     padding: 0;
   }
 
   /* copyright */
-
   .footer__copyright {
     max-width: 282px;
     font-size: 14px;
