--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,5 +1,6 @@
-/* -------------  1280  ------------- */
+/* src/blocks/page.css */
 
+/* -------------  1280  ------------- */
 .page {
   max-width: 1280px;
   width: 100%;
@@ -12,7 +13,6 @@
 }
 
 /* -------------  1152  ------------- */
-
 @media screen and (max-width: 1152px) {
   .page {
     width: 90%;
@@ -20,7 +20,6 @@
 }
 
 /* -------------  1088  ------------- */
-
 @media screen and (max-width: 1088px) {
   .page {
     width: 85%;
@@ -28,7 +27,6 @@
 }
 
 /* -------------  1024  ------------- */
-
 @media screen and (max-width: 1024px) {
   .page {
     width: 80%;
@@ -36,7 +34,6 @@
 }
 
 /* -------------  896  ------------- */
-
 @media screen and (max-width: 896px) {
   .page {
     width: 70%;
@@ -44,7 +41,6 @@
 }
 
 /* -------------  768  ------------- */
-
 @media screen and (max-width: 768px) {
   .page {
     width: 60%;
@@ -52,7 +48,6 @@
 }
 
 /* -------------  656  ------------- */
-
 @media screen and (max-width: 656px) {
   .page {
     width: 70%;
@@ -60,7 +55,6 @@
 }
 
 /* -------------  544  ------------- */
-
 @media screen and (max-width: 544px) {
   .page {
     width: 80%;
@@ -68,7 +62,6 @@
 }
 
 /* -------------  432  ------------- */
-
 @media screen and (max-width: 432px) {
   .page {
     width: 85%;
@@ -76,7 +69,6 @@
 }
 
 /* -------------  375  ------------- */
-
 @media screen and (max-width: 375px) {
   .page {
     width: 90%;
@@ -84,7 +76,6 @@
 }
 
 /* -------------  320  ------------- */
-
 @media screen and (max-width: 320px) {
   .page {
     width: 100%;
