--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,5 @@
 @import url(./blocks/element.css);
 @import url(./blocks/footer.css);
 @import url(./blocks/popup.css);
+@import url(./blocks/login.css);
+@import url(./blocks/register.css);
